feat(cors): added the cors properties to configure allowed origins, allowed headers, allow credentials and max age for prefelight